Fix ul spacing (#2629)

--- a/docs/docs/.vuepress/styles/index.styl
+++ b/docs/docs/.vuepress/styles/index.styl
@@ -43,10 +43,14 @@ div .sidebar-button svg
 	margin-left: -25px
 	margin-top: 1px
 
-p, ol, ul {
+p {
   display: block
   margin-block-start: 1em
   margin-block-end: 1em
   margin-inline-start: 0px
   margin-inline-end: 0px
+}
+
+*:not(li)>ul {
+  margin-top: 1em;
 }
